# lf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md
.github/workflows/: ci.yml
docs/plans/: 2026-01-12-prompt-management-design.md  2026-01-12-prompt-management-plan.md
src/: client.rs  config.rs  main.rs  types.rs
src/commands/: config.rs  datasets.rs  metrics.rs  mod.rs  observations.rs  prompts.rs  scores.rs  sessions.rs  traces.rs
src/formatters/: csv_formatter.rs  json.rs  markdown.rs  mod.rs  table.rs
